# Sources files for the Markdown label widget

srcs_lib_markdown += files(
  'LabelExt.vala',
  'Markdown.vala',
  'MarkdownAstEmphasis.vala',
  'MarkdownEmphasis.vala',
  'MarkdownNode.vala',
  'MarkdownToLabel.vala',
  'SpecialWidgets/Gif.vala',
  'SpecialWidgets/Table.vala',
  'SpecialWidgets/SupraLabel.vala',
  'SpecialWidgets/Vector2i.vala',
  'MarkdownElement/MarkdownElement.vala',
  'MarkdownElement/MarkdownElementBlockquote.vala',
  'MarkdownElement/MarkdownElementCodeBlock.vala',
  'MarkdownElement/MarkdownElementImage.vala',
  'MarkdownElement/MarkdownElementSeparator.vala',
  'MarkdownElement/MarkdownElementTable.vala',
  'MarkdownElement/MarkdownElementText.vala'
)
